--- a/Module 1.4 - Introduction to Pandas.ipynb
+++ b/Module 1.4 - Introduction to Pandas.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9f1fe8f2",
+   "metadata": {},
+   "source": [
+    "# Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b605ca09",
+   "metadata": {},
+   "source": [
+    "1. Delete Columns\n",
+    "2. Delete Rows & loc, iloc\n",
+    "3. Rename Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e31a0f21",
