--- a/Module 1.1 - Introduction to Pandas.ipynb
+++ b/Module 1.1 - Introduction to Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59769821",
+   "id": "b4c7dc24",
    "metadata": {},
    "source": [
     "# Pandas for Data Science (Bangla Course)"
@@ -10,11 +10,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdcb4b64",
+   "id": "78f5b1c0",
    "metadata": {},
    "source": [
     "Full Playlist: https://youtube.com/playlist?list=PLKdU0fuY4OFdsmcM817qp1L3ngU5amkak&si=GCnoLN-f8TgxfAF8 <br>\n",
     "Connect with Author: https://www.linkedin.com/in/kmrashedulalam/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa8fa13",
+   "metadata": {},
+   "source": [
+    "# Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88bbf471",
+   "metadata": {},
+   "source": [
+    "1. Creating Series\n",
+    "2. Datatypes in Pandas"
    ]
   },
   {
